TRABAJO EN CLASE

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -4,11 +4,39 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Facelet Title</title>
+        <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
         Hello from Facelets
         <br />
         <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+        <br />
+        <h:link outcome="/carrera/List" value="Show All Carrera Items"/>
+        <br />
+        <h:link outcome="/direccionEmpresa/List" value="Show All DireccionEmpresa Items"/>
+        <br />
+        <h:link outcome="/empresa/List" value="Show All Empresa Items"/>
+        <br />
+        <h:link outcome="/estudiante/List" value="Show All Estudiante Items"/>
+        <br />
+        <h:link outcome="/pasantia/List" value="Show All Pasantia Items"/>
+        <br />
+        <h:link outcome="/persona/List" value="Show All Persona Items"/>
+        <br />
+        <h:link outcome="/registroActividad/List" value="Show All RegistroActividad Items"/>
+        <br />
+        <h:link outcome="/rol/List" value="Show All Rol Items"/>
+        <br />
+        <h:link outcome="/supervision/List" value="Show All Supervision Items"/>
     </h:body>
+
+
+
+
+
+
+
+
+
 </html>
 
